Add user role
    - Display view and settings based on current user role